# openct

./: .gitignore  configure.ac
etc/: Info.plist
src/ct/: Makefile.am
src/ctapi/: Makefile.am
src/ifd/: Makefile.am  conf.c  device.c  manager.c  reader.c  sys-bsd.c  sys-linux.c  utils.c
src/include/openct/: Makefile.am
src/pcsc/: Makefile.am  pcsc-ifdhandler.c  test.c
src/tools/: Makefile.am  openct-control.c
